Main structure and style css for whole page min width to avoid header text wraping

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     /*height: 100%;*/
     display: flex;
     flex-direction: column;
+    min-width: 1000px;
 }
 
 /* HEADER */
@@ -28,6 +29,7 @@ body {
     font-size: 24px;
     align-items: center;
     justify-content: center;
+    white-space: nowrap;
 }
 
 .header > div {
@@ -118,7 +120,7 @@ a {
 }
 
 .info-card {
-    flex: 0 1 200px;
+    flex: 0 1 150px;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -127,7 +129,7 @@ a {
 }
 
 .info-square {
-    height: 200px;
+    height: 150px;
     border: 3px solid #537dc2;
     border-radius: 10px;
 }
